--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hola mundo Tomcat</title>
 </head>
 <body>
+<h1>Hola mundo tomcat</h1>
+<ul>
+    <li>
+        <a href="/webapp/parametros/url-get?saludo=Hola Sergio">enviado parámetros saludo: /url-get?saludo=Hola
+            Sergio</a>
+    </li>
+    <li>
+        <a href="/webapp/parametros/url-get?saludo=Hola&nombre=Sergio">enviado parámetros saludo:
+            url-get?saludo=Hola&nombre=Sergio</a>
+    </li>
+    <li>
+        <a href="/webapp/parametros/url-get?nombre=Sergio">enviado parámetros saludo: /url-get?nombre=Sergio</a>
+    </li>
+    <li>
+        <a href="/webapp/parametros/url-get?saludo=Hola&nombre=Sergio&codigo=12345">enviado parámetros saludo: url-get?saludo=Hola&nombre=Sergio&codigo=12345</a>
+    </li>
+</ul>
 
 </body>
 </html>
